src/test/ui/regions/regions-lifetime-bounds-on-fns.stderr
error[E0623]: lifetime mismatch
  --> $DIR/regions-lifetime-bounds-on-fns.rs:8:10
   |
LL | fn b<'a, 'b>(x: &mut &'a isize, y: &mut &'b isize) {
   |                      ---------          --------- these two types are declared with different lifetimes...
LL |     // Illegal now because there is no `'b:'a` declaration.
LL |     *x = *y;
   |          ^^ ...but data from `y` flows into `x` here

error[E0623]: lifetime mismatch
  --> $DIR/regions-lifetime-bounds-on-fns.rs:14:7
   |
LL | fn c<'a,'b>(x: &mut &'a isize, y: &mut &'b isize) {
   |                     ---------          --------- these two types are declared with different lifetimes...
...
LL |     a(x, y);
   |       ^ ...but data from `y` flows into `x` here

error[E0308]: mismatched types
  --> $DIR/regions-lifetime-bounds-on-fns.rs:20:43
   |
LL |     let _: fn(&mut &isize, &mut &isize) = a;
   |                                           ^ expected concrete lifetime, found bound lifetime parameter
   |
   = note: expected type `for<'r, 's, 't0, 't1> fn(&'r mut &'s isize, &'t0 mut &'t1 isize)`
              found type `for<'r, 's> fn(&'r mut &isize, &'s mut &isize) {a::<'_, '_>}`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
